# ConcurrentQueue

./: CMakeLists.txt  ConcurrentQueue.sln  ConcurrentQueue_vc2013.sln  README.md
projects/vc2013/ConcurrentQueue/: ConcurrentQueue.vcxproj  ConcurrentQueue.vcxproj.filters
projects/vc2015/ConcurrentQueue/: ConcurrentQueue.vcxproj  ConcurrentQueue.vcxproj.filters
src/ConcurrentQueue/: DisruptorRingQueue.h  LockedRingQueue.h  MinMax.h  NativeMutex.h  PowerOf2.h  QtSignal.h  QtSignalImpl.h  QueueWrapper.h  Sequence.h  SingleRingQueue.h  ValueEvent.h  ValueMessage.h  common.h  main.cpp  stop_watch.h  this_thread.h
